--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -5,10 +5,8 @@
 
         <div class="flex flex-row">
 
-            <button class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover font-semibold ">M'inscrire  😍
+            <button class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover font-semibold ">M'inscrire 😍
             </button>
-
-
         </div>
     </div>
 
@@ -19,33 +17,30 @@
                     class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-3xl text-black leading-tight sm:text-5xl ">
                     Le réseau immobilier qui <br>te fait <span class="light-red">gagner du temps </span> </h1>
             </div>
-<!-- 
-            <button
-                class="btn_blue_3 text-white font-semibold py-4 px-12 rounded-md mt-3 mb-8 animate__animated animate__fadeInUp btnhover">
-                Démarrer 😍</button> -->
         </div>
-        <div class=" ">
+
+        <div>
             <img src="../../../../../assets/images/Tenders-assets/IMAGES ILLUSTRATIONS/1.png" width="1900px"
                 class="translate-y-28 animate__animated animate__fadeInUp  " alt="">
         </div>
     </div>
-
 </div>
 
 
 
 
 <div class="px-6 sm:px-8 lg:px-24  mb-5">
-
     <div class="relative  mt-20 mb-20 ">
-        <div class="grid grid md:grid-cols-2 animate__animated animate__fadeInUp ">
+        <div class="grid grid md:grid-cols-2 animate__animated animate__fadeInUp">
 
 
-            <img src="../../../../../assets/images/Tenders-assets/IMAGES ILLUSTRATIONS/2.png" class="hidden md:block mx-auto md:mx-0 " alt="">
+            <img src="../../../../../assets/images/Tenders-assets/IMAGES ILLUSTRATIONS/2.png"
+                class="hidden md:block mx-auto md:mx-0 " alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
-                    <h1 class=" popping font-extrabold leading-tight text-4xl mb-4 sm:text-5xl">tenders <span class="text-purple">en
+                    <h1 class=" popping font-extrabold leading-tight text-4xl mb-4 sm:text-5xl">tenders <span
+                            class="text-purple">en
                             quelques <br>
                             mots...</span>
                     </h1>
@@ -62,26 +57,31 @@
                     fluide et intuitive, tu crées ton profil en quelques clics et tes recherches n’auront jamais été
                     aussi rapides !</p>
             </div>
-
-
         </div>
     </div>
 
 
     <div class="relative max-w-7xl mx-auto mt-20 animate__animated animate__fadeInUp">
-        <div class="">
-            <div class="flex flex-col items-center">
-                <h2 class="text-4xl popping font-extrabold  mt-10 text-center sm:text-5xl">
-                    Une platforme pensées 
-                    <span class="textpurle">
+        <div class="flex flex-col items-center">
+
+            <h2 class="text-4xl popping font-extrabold  mt-10 text-center sm:text-5xl">
+                Une platforme pensées
+                <span class="textpurle">
+                    pour vous
+                </span>
+
+                <h2 class="text-4xl popping font-extrabold leading-sng mt-10 text-center sm:text-6xl">
+                    Une platforme pensées <br>
+                    <span class="text-blue-2">
                         pour vous
-                    </span> 
+                    </span>
                 </h2>
-                <img src="../../../../../assets/images/bulle3.png"
+                <!-- <img src="../../../../../assets/images/bulle3.png"
                     class="-translate-y-36 translate-x-28 md:-translate-y-44 md:translate-x-80 " height="100px" f
-                    alt="">
-            </div>
+                    alt=""> -->
+
         </div>
+
         <div class="mt-12 max-w-lg mx-auto grid gap-5 md:grid-cols-3 md:max-w-none">
             <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
 
@@ -177,7 +177,8 @@
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
 
-            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/trouver-un-bien.png" class="	mx-auto md:mx-0 rounded-2xl shadow-lg" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/trouver-un-bien.png"
+                class="	mx-auto md:mx-0 rounded-2xl shadow-lg" alt="">
 
         </div>
     </div>
@@ -187,12 +188,13 @@
             <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/postulations.png" alt="">
             <div class="flex flex-col pt-10 items-end ">
 
-            <!-- <img src="../../../../../assets/images/home8.png" class="	" alt="">
+                <!-- <img src="../../../../../assets/images/home8.png" class="	" alt="">
             <div class="flex flex-col pt-0 xl:pt-10 items-start"> -->
 
                 <div class=" flex flex-row">
-                    <h1 class="text-3xl mt-3 popping font-extrabold leading-normal sm:text-4xl"> <span class="text--blue">Postule</span>
-                        et consulte en temps réel <span class="text--blue">la progression de ton dossier</span>  </h1>
+                    <h1 class="text-3xl mt-3 popping font-extrabold leading-normal sm:text-4xl"> <span
+                            class="text--blue">Postule</span>
+                        et consulte en temps réel <span class="text--blue">la progression de ton dossier</span> </h1>
                     <!-- <img src="../../../../../assets/images/bulle6.png"
                         class="-translate-y-20 -translate-x-10 height-100" alt=""> -->
                 </div>
@@ -202,33 +204,31 @@
                     dolor posuere
                     maximus. Phasellus pulvinar facilisis.</p>
             </div>
-
-
-
         </div>
     </div>
+
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2 grid-flow-col	  gap-14">
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Pour les remetteurs</h1>
                 <div class="flex flex-row ">
-                    <h2 class=" popping font-extrabold  leading-snug text-3xl sm:text-4xl ">Publie  <span class="light-yellow">
-                        tes biens
-                            <br>
-                            immobiliers</span></h2>
+                    <h2 class=" popping font-extrabold  leading-snug text-3xl sm:text-4xl ">Publie <span
+                            class="light-yellow">tes biens<br>immobiliers</span></h2>
                 </div>
 
                 <p class="mt-5 text-lg text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
-            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/32. nouveau_bien7.png" class="mx-auto md:mx-0 rounded-2xl shadow-lg" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/32. nouveau_bien7.png"
+                class="mx-auto md:mx-0 rounded-2xl shadow-lg" alt="">
 
         </div>
     </div>
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp ">
         <div class="grid md:grid-cols-2  gap-14">
-            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/15. candidatures-nouveau.png" class="mx-auto md:mx-0 shadow-lg" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/15. candidatures-nouveau.png"
+                class="mx-auto md:mx-0 shadow-lg" alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
@@ -264,13 +264,15 @@
                     recherche un des candidats(s), notre plateforme offre un
                     accompagnement complet et totalement digitalisé</p>
             </div>
-            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/mes visites.png" class="mx-auto md:mx-0 shadow-lg" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/mes visites.png"
+                class="mx-auto md:mx-0 shadow-lg" alt="">
 
         </div>
     </div>
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
-            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/9. accueil.png" class="mx-auto md:mx-0 shadow-lg" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/9. accueil.png"
+                class="mx-auto md:mx-0 shadow-lg" alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Un réseau immobilier</h1>
