--- a/src/app/modules/login/pages/login/login.component.html
+++ b/src/app/modules/login/pages/login/login.component.html
@@ -38,7 +38,7 @@
             </div>
             <div class="my-3">
                 <button
-                    class="w-full text-white py-4  popping bg_blue_button hover:bg-blue-600 rounded-xl active:-translate-y-1">Se
+                    class="w-full text-white py-4  popping bg_blue_button hover:bg-blue-600 rounded-xl active:-translate-y-1" (click)="login()">Se
                     Connecter</button>
             </div>
             <div class="text-center">
