--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -77,89 +77,89 @@
                 <!-- <img src="../../../../../assets/images/bulle3.png"
                     class="-translate-y-36 translate-x-28 md:-translate-y-44 md:translate-x-80 " height="100px" f
                     alt=""> -->
-             </h2>
-             </div>
+            </h2>
         </div>
+    </div>
 
-        <div class="mt-12 max-w-lg mx-auto grid gap-5 md:grid-cols-3 md:max-w-none">
-            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
+    <div class="mt-12 max-w-lg mx-auto grid gap-5 md:grid-cols-3 md:max-w-none">
+        <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
 
-                <div class="flex-1 bg-white p-6 flex flex-col justify-between ">
-                    <div class="flex-1 ">
-                        <a href="#" class="block mt-2">
+            <div class="flex-1 bg-white p-6 flex flex-col justify-between ">
+                <div class="flex-1 ">
+                    <a href="#" class="block mt-2">
 
-                            <img src="../../../../../assets/images/locataire.png" class="mb-5 " alt="">
+                        <img src="../../../../../assets/images/locataire.png" class="mb-5 " alt="">
 
-                            <p class="text-xl font-bold text-gray-900">
-                                Locataire
-                            </p>
-                            <p class="mt-3 text-lg text-gray-500 ">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
-                                eleifend. Fusce mollis hendrerit
-                                mauris et aliquet.
-                            </p>
-                        </a>
-                    </div>
-                    <div class="mt-6 flex items-center">
-                        <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
-                        <img src="../../../../../assets/images/right-arrow.png" alt="">
-                    </div>
+                        <p class="text-xl font-bold text-gray-900">
+                            Locataire
+                        </p>
+                        <p class="mt-3 text-lg text-gray-500 ">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
+                            eleifend. Fusce mollis hendrerit
+                            mauris et aliquet.
+                        </p>
+                    </a>
                 </div>
-            </div>
-
-
-
-            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
-
-                <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-                    <div class="flex-1">
-
-                        <a href="#" class="block mt-2">
-                            <img src="../../../../../assets/images/bailleur.png" class="mb-5" alt="">
-
-                            <p class="text-xl font-bold text-gray-900">
-                                Propriétaire
-                            </p>
-                            <p class="mt-3 text-lg text-gray-500">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
-                                eleifend. Fusce mollis hendrerit
-                                mauris et aliquet.
-                            </p>
-                        </a>
-                    </div>
-                    <div class="mt-6 flex items-center ">
-                        <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
-                        <img src="../../../../../assets/images/right-arrow.png" alt="">
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
-
-                <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-                    <div class="flex-1">
-
-                        <a href="#" class="block mt-2">
-                            <img src="../../../../../assets/images/pro.png" class="mb-5" alt="">
-
-                            <p class="text-xl font-bold text-gray-900">
-                                Professionnel
-                            </p>
-                            <p class="mt-3 text-lg text-gray-500">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
-                                eleifend. Fusce mollis hendrerit
-                                mauris et aliquet.
-                            </p>
-                        </a>
-                    </div>
-                    <div class="mt-6 flex items-center">
-                        <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
-                        <img src="../../../../../assets/images/right-arrow.png" alt="">
-                    </div>
+                <div class="mt-6 flex items-center">
+                    <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
+                    <img src="../../../../../assets/images/right-arrow.png" alt="">
                 </div>
             </div>
         </div>
+
+
+
+        <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
+
+            <div class="flex-1 bg-white p-6 flex flex-col justify-between">
+                <div class="flex-1">
+
+                    <a href="#" class="block mt-2">
+                        <img src="../../../../../assets/images/bailleur.png" class="mb-5" alt="">
+
+                        <p class="text-xl font-bold text-gray-900">
+                            Propriétaire
+                        </p>
+                        <p class="mt-3 text-lg text-gray-500">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
+                            eleifend. Fusce mollis hendrerit
+                            mauris et aliquet.
+                        </p>
+                    </a>
+                </div>
+                <div class="mt-6 flex items-center ">
+                    <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
+                    <img src="../../../../../assets/images/right-arrow.png" alt="">
+                </div>
+            </div>
+
+        </div>
+
+        <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
+
+            <div class="flex-1 bg-white p-6 flex flex-col justify-between">
+                <div class="flex-1">
+
+                    <a href="#" class="block mt-2">
+                        <img src="../../../../../assets/images/pro.png" class="mb-5" alt="">
+
+                        <p class="text-xl font-bold text-gray-900">
+                            Professionnel
+                        </p>
+                        <p class="mt-3 text-lg text-gray-500">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
+                            eleifend. Fusce mollis hendrerit
+                            mauris et aliquet.
+                        </p>
+                    </a>
+                </div>
+                <div class="mt-6 flex items-center">
+                    <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
+                    <img src="../../../../../assets/images/right-arrow.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
             <div class="flex flex-col pt-10 items-start ">
@@ -183,7 +183,8 @@
     <div class="relative   mt-20 animate__animated animate__fadeInUp ">
         <div class="grid md:grid-cols-2 gap-14 ">
 
-            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/postulations.png" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/postulations.png"
+                class="order-last md:order-first" alt="">
             <div class="flex flex-col pt-10 items-end ">
 
                 <!-- <img src="../../../../../assets/images/home8.png" class="	" alt="">
@@ -479,6 +480,4 @@
         </div>
     </footer>
 
-    </div>
-    
-
+</div>
