--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -62,18 +62,11 @@
     <div class="relative max-w-7xl mx-auto mt-20 animate__animated animate__fadeInUp">
         <div class="flex flex-col items-center">
 
-            <h2 class="text-4xl popping font-extrabold  mt-10 text-center sm:text-5xl">
-                Une platforme pensées
-                <span class="textpurle">
+            <h2 class="text-4xl popping font-extrabold leading-sng mt-10 text-center sm:text-6xl">
+                Une platforme pensées <br>
+                <span class="text-blue-2">
                     pour vous
                 </span>
-
-                <h2 class="text-4xl popping font-extrabold leading-sng mt-10 text-center sm:text-6xl">
-                    Une platforme pensées <br>
-                    <span class="text-blue-2">
-                        pour vous
-                    </span>
-                </h2>
                 <!-- <img src="../../../../../assets/images/bulle3.png"
                     class="-translate-y-36 translate-x-28 md:-translate-y-44 md:translate-x-80 " height="100px" f
                     alt=""> -->
@@ -207,7 +200,7 @@
     </div>
 
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
-        <div class="grid md:grid-cols-2 grid-flow-col	  gap-14">
+        <div class="grid md:grid-cols-2 grid-flow-colgap-14">
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Pour les remetteurs</h1>
                 <div class="flex flex-row ">
@@ -227,7 +220,7 @@
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp ">
         <div class="grid md:grid-cols-2  gap-14">
             <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/15. candidatures-nouveau.png"
-                class="mx-auto md:mx-0 shadow-lg" alt="">
+                class="mx-auto md:mx-0 shadow-lg" class="order-last md:order-first" alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
@@ -271,7 +264,7 @@
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
             <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/9. accueil.png"
-                class="mx-auto md:mx-0 shadow-lg" alt="">
+                class="mx-auto md:mx-0 shadow-lg" class="order-last md:order-first" alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Un réseau immobilier</h1>
