landing page modifications

--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -9,13 +9,15 @@
     </div>
     <div class="grid md:grid-cols-2">
         <div class="relative">
+            <img class="-translate-x-16 translate-y-4 hidden md:block" src="../../../../../assets/images/dots.png"
+                alt="">
             <h2
                 class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-3xl text-black leading-tight sm:text-4xl leading-20 animate__animated animate__fadeInUp  ">
                 Content de savoir que vous <br> allez faire partie de <br> l’aventure
                 notre communauté</h2>
 
         </div>
-        <div class="justify-self-center  -translate-y-16">
+        <div class="justify-self-center">
             <img class="md:block animate__animated animate__fadeInUp " src="../../../../../assets/images/leading1.png"
                 alt="">
         </div>
