landing page html modif

--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -25,34 +25,34 @@
     </div>
 </div>
 
-<div class=" px-6 sm:px-8  pt-16 mb-5 lg:px-20">
+<div class=" px-6 sm:px-8  pt-8  mb-5 lg:px-20">
     <!--    <input type="email" name="email" id="email" placeholder="Votre email"
             class="py-3 mt-2 px-4 w-full block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200"> -->
     <div class=" max-w-4xl mt-5 md:-mt-16 ">
-        <div class="text-left mb-5">
-            <h2 class="text-2xl popping font-extrabold my-4  sm:text-3xl ">
+        <div class="text-left mb-20">
+            <h2 class="text-3xl popping font-medium my-4  sm:text-4xl ">
                 Renseigner vos informations
             </h2>
         </div>
         <form class="grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
             <div>
-                <label for="first-name" class="block text-sm font-medium text-gray-700">Votre nom</label>
+                <label for="nom" class="block text-sm font-medium text-gray-700">Votre nom</label>
                 <div class="mt-1">
-                    <input type="email" name="email" id="email" placeholder="Votre email"
+                    <input type="text" name="nom" id="nom" placeholder="Votre nom"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                 </div>
             </div>
             <div>
-                <label for="last-name" class="block text-sm font-medium text-gray-700">Votre Prénom</label>
+                <label for="prenom" class="block text-sm font-medium text-gray-700">Votre Prénom</label>
                 <div class="mt-1">
-                    <input type="email" name="email" id="email" placeholder="Votre email"
+                    <input type="text" name="prenom" id="prenom" placeholder="Votre prénom"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                 </div>
             </div>
             <div>
-                <label for="first-name" class="block text-sm font-medium text-gray-700">Téléphone</label>
+                <label for="telephone" class="block text-sm font-medium text-gray-700">Téléphone</label>
                 <div class="mt-1">
-                    <input type="email" name="email" id="email" placeholder="Votre email"
+                    <input type="text" name="telephone" id="telephone" placeholder="Votre téléphone"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                 </div>
             </div>
