landing page changes

--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -4,7 +4,9 @@
     <div class="flex justify-between mb-20 container px-18">
         <img src="../../../../../assets/images/logo1.png" class="animate__animated animate__fadeInUp" alt="">
 
-        <button class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover font-semibold ">Accueil 😍
+        <button
+            class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover font-semibold flex flex-row items-center justify-between">Accueil
+            <span class="hidden md:block ml-2">😍</span>
         </button>
     </div>
     <div class="grid md:grid-cols-2">
@@ -75,7 +77,7 @@
 </div>
 
 <footer class="bg-white" aria-labelledby="footer-heading">
-    <h2 id="footer-heading" class="sr-only">Footer</h2>
+       <h2 id="footer-heading" class="sr-only">Footer</h2>
     <div class="container mx-auto  mt-20 px-20 mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
         <div class="xl:grid xl:grid-cols-3 xl:gap-8">
             <div class="space-y-8 xl:col-span-1">
@@ -216,12 +218,12 @@
                                     </ul>
                                 </div>
                             </div> -->
-            </div>
-        </div>
-        <div class="mt-12 border-t border-gray-200 pt-8">
-            <p class="text-lg text-gray-400 xl:text-center">
-                &copy; Copyright © Holo 2021. Tous droits réservés.
-            </p>
-        </div>
+    </div>
+    </div>
+    <div class="mt-12 border-t border-gray-200 pt-8">
+        <p class="text-lg text-gray-400 xl:text-center">
+            &copy; Copyright © Holo 2021. Tous droits réservés.
+        </p>
+    </div>
     </div>
 </footer>
