--- a/src/app/modules/login/pages/login/login.component.html
+++ b/src/app/modules/login/pages/login/login.component.html
@@ -13,7 +13,7 @@
 
     </div>
     <div
-        class=" login__left h-full rounded-xl shadow-lg md:shadow-none md:border-0 md:rounded-none py-3 md:py-0 border-2 md:mt-28 mt-9 mx-3 px-4 lg:px-9 xl:px-36 bg-white ">
+        class=" login__left  rounded-xl shadow-lg md:shadow-none md:border-0 md:rounded-none py-3 md:py-0 border-2 md:mt-28 mt-9 mx-3 px-4 lg:px-9 xl:px-36 bg-white ">
         <div class="login__left__title mt-10 ">
             <span class="login__left__title__text mb-5">Se connecter</span>
         </div>
@@ -38,7 +38,8 @@
             </div>
             <div class="my-3">
                 <button
-                    class="w-full text-white py-4  popping bg_blue_button hover:bg-blue-600 rounded-xl active:-translate-y-1" (click)="login()">Se
+                    class="w-full text-white py-4  popping bg_blue_button hover:bg-blue-600 rounded-xl active:-translate-y-1"
+                    (click)="login()">Se
                     Connecter</button>
             </div>
             <div class="text-center">
