--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -303,9 +303,9 @@
 
 
 </div>
-<footer class="bg-white" aria-labelledby="footer-heading">
+<footer class="bg-white px-6 sm:px-8 lg:px-24  " aria-labelledby="footer-heading">
     <h2 id="footer-heading" class="sr-only">Footer</h2>
-    <div class="container mx-auto  mt-20 px-20 mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
+    <div class="container mx-auto  mt-20 px-20 mx-auto py-12  sm:px-6 lg:py-16">
         <div class="xl:grid xl:grid-cols-3 xl:gap-8">
             <div class="space-y-8 xl:col-span-1">
                 <img src="../../../../../assets/images/logo.png" alt="Company name">
