--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -76,9 +76,9 @@
 
 </div>
 
-<footer class="bg-white" aria-labelledby="footer-heading">
-       <h2 id="footer-heading" class="sr-only">Footer</h2>
-    <div class="container mx-auto  mt-20 px-20 mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
+<footer class="bg-white px-6 sm:px-8 lg:px-24 " aria-labelledby="footer-heading">
+    <h2 id="footer-heading" class="sr-only">Footer</h2>
+    <div class="container mx-auto  mt-20 mx-auto py-12 sm:px-6 lg:py-16 ">
         <div class="xl:grid xl:grid-cols-3 xl:gap-8">
             <div class="space-y-8 xl:col-span-1">
                 <img src="../../../../../assets/images/logo.png" alt="Company name">
@@ -218,12 +218,12 @@
                                     </ul>
                                 </div>
                             </div> -->
-    </div>
-    </div>
-    <div class="mt-12 border-t border-gray-200 pt-8">
-        <p class="text-lg text-gray-400 xl:text-center">
-            &copy; Copyright © Holo 2021. Tous droits réservés.
-        </p>
-    </div>
+            </div>
+        </div>
+        <div class="mt-12 border-t border-gray-200 pt-8">
+            <p class="text-lg text-gray-400 xl:text-center">
+                &copy; Copyright © Holo 2021. Tous droits réservés.
+            </p>
+        </div>
     </div>
 </footer>
